@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -calculate-sources-2.6.34.4.ebuild, calculate-sources-2.6.34.6.ebuild:
+  Remove old version.
+
   30 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru> ChangeLog:
   bump new versions
 
